--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
-    "sass": "^1.43.4"
+    "mixitup": "^3.3.1",
+    "sass": "^1.43.4",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "gulp-imagemin": "^7.1.0"
